# pubfix

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  build.sh  build_readme.sh  pack.sh
cmake/: GetDependencies.cmake
pubfix/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
